--- a/ShareFile3/appsettings.json
+++ b/ShareFile3/appsettings.json
@@ -3,7 +3,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
+    },
+    "MinimumLogLevel": "Information",
+    "LogFilePath": "logs/log-.txt",
+    "FileSizeLimitBytes": 5242880, // 5 Mb
+    "FileTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Scope}: {Message}{NewLine}{Exception}",
+    "ConsoleTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss} {Level:u3}] {Scope}: {Message}{NewLine}{Exception}",
   },
   "AllowedHosts": "*"
 }
